k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acacia360-maintenance-service
  labels:
    app: acacia360-maintenance-app

spec:
  type: ClusterIP

  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP

  selector:
    app: acacia360-maintenance-app
