k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acacia360-maintenance-ingress
  labels:
    app: acacia360-maintenance-app

  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://192.168.1.135:8085,http://acacia360.local,http://192.168.1.135:80"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, Accept"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Maintenance React Native Web Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acacia360-maintenance-service
                port:
                  number: 8085

          # Shared Backend Gateway
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: acacia360-gateway-service
                port:
                  number: 3050
